--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: url("../img/doodle.svg");
+    background-image: url("../../dashboard/img/1.jpeg");
     display: flex;
     justify-content: center;
     align-items: center;
